---
source: src/grammar.rs
expression: "format!(\"{:?}\", result)"
---
start_symbol: S(ID: 4)
S_repeat0_0 ::= S_repeat0_0(ID: 0) B_optional_0_group_0(ID: 2) | B_optional_0_group_0(ID: 2);
C ::= 'dc'(ID: 0);
B_optional_0_group_0 ::= 'a'(ID: 1) B_optional_0_group_0(ID: 2) | 'a'(ID: 1);
A ::= A(ID: 3) 'c'(ID: 2) | #"Ac|cd"(ID: 0,type: DFA);
S ::= 'ef'(ID: 3) S_repeat0_0(ID: 0) | except!(#'c',10)(ID: 0,type: DFA) | except!(#'dc')(ID: 1,type: DFA) | 'jk'(ID: 4) A(ID: 3) | 'ab'(ID: 5) S(ID: 4) | #"abc|ef|ab"(ID: 1,type: DFA);
